--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,11 +19,31 @@
         <!-- Text colors -->
         <item name="android:textColorPrimary">@color/dark_primary_text</item>
         <item name="android:textColorSecondary">@color/dark_secondary_text</item>
+        <!-- Text appearances for Material Components -->
+        <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.MaterialComponents.Headline2</item>
+        <item name="textAppearanceHeadline3">@style/TextAppearance.MaterialComponents.Headline3</item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.MaterialComponents.Headline4</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.MaterialComponents.Headline5</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.MaterialComponents.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.MaterialComponents.Subtitle1</item>
+        <item name="textAppearanceSubtitle2">@style/TextAppearance.MaterialComponents.Subtitle2</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.MaterialComponents.Body2</item>
+        <item name="textAppearanceCaption">@style/TextAppearance.MaterialComponents.Caption</item>
+        <item name="textAppearanceButton">@style/TextAppearance.MaterialComponents.Button</item>
+        <item name="textAppearanceOverline">@style/TextAppearance.MaterialComponents.Overline</item>
         <!-- Custom attributes -->
         <item name="cardBackgroundColor">@color/dark_card_background</item>
         <item name="primaryTextColor">@color/dark_primary_text</item>
         <item name="secondaryTextColor">@color/dark_secondary_text</item>
         <item name="progressBackgroundColor">@color/progress_background_dark</item>
+        <!-- Material 3 compatibility -->
+        <item name="colorSurfaceVariant">@color/dark_divider</item>
+        <item name="colorOutline">@color/dark_secondary_text</item>
+        <!-- Material Components styles -->
+        <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
     </style>
 
     <!-- Calculator Button Styles - Dark Theme -->
