--- a/app/src/main/res/layout/dialog_calculator.xml
+++ b/app/src/main/res/layout/dialog_calculator.xml
@@ -269,6 +269,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Clear"
+            android:textSize="16sp"
             android:textColor="?attr/colorPrimary"
             android:layout_marginEnd="8dp"
             android:minWidth="64dp" />
@@ -279,6 +280,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
+            android:textSize="16sp"
             android:textColor="?attr/colorPrimary"
             android:layout_marginEnd="8dp"
             android:minWidth="64dp" />
@@ -289,6 +291,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK"
+            android:textSize="16sp"
             app:backgroundTint="?attr/colorPrimary"
             android:minWidth="64dp" />
 
