--- a/app/src/main/res/layout/dialog_category_selection.xml
+++ b/app/src/main/res/layout/dialog_category_selection.xml
@@ -49,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Category"
+            android:textSize="16sp"
             android:textColor="?attr/colorPrimary"
             android:minWidth="64dp"
             android:paddingHorizontal="24dp" />
