--- a/app/src/main/res/layout/dialog_currency_selection.xml
+++ b/app/src/main/res/layout/dialog_currency_selection.xml
@@ -43,7 +43,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="?attr/primaryTextColor"
-            android:inputType="text" />
+            android:inputType="text"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="16dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
