--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,22 +49,40 @@
     <!-- Calculator Button Styles - Light Theme -->
     <style name="CalculatorButtonStyle" parent="Widget.Material3.Button.TonalButton">
         <item name="android:layout_margin">6dp</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">?attr/primaryTextColor</item>
         <item name="backgroundTint">?attr/colorSurfaceVariant</item>
         <item name="cornerRadius">16dp</item>
         <item name="android:minHeight">60dp</item>
+        <item name="android:minWidth">60dp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ellipsize">none</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
     </style>
 
     <style name="CalculatorOperatorButtonStyle" parent="Widget.Material3.Button">
         <item name="android:layout_margin">6dp</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">?attr/colorPrimary</item>
         <item name="cornerRadius">16dp</item>
         <item name="android:minHeight">60dp</item>
+        <item name="android:minWidth">60dp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ellipsize">none</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
     </style>
 
 </resources>
